fixed qt linking issue by rewriting linking flags for setup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CMAKE_CXX_FLAGS "-march=native -I -O3 -pthread -Wall -DQT_NO_VERSION_TAGGING")
+set(CMAKE_CXX_FLAGS "-march=native -I -Ofast -pthread -Wall -DQT_NO_VERSION_TAGGING")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0")
 
@@ -33,6 +33,14 @@ add_library(FrenetOptimalTrajectory STATIC
             AnytimeFrenetPlanner.cpp
             AnytimeFrenetPlanner.h)
 
+add_executable(FrenetOptimalTrajectoryTest
+            main.cpp
+            AnytimeFrenetPlanner.cpp
+            AnytimeFrenetPlanner.h
+)
+
 # target_link_libraries(FrenetOptimalTrajectory Eigen3::Eigen Qt5::Widgets Qt5::Gui)
 target_link_libraries(FrenetOptimalTrajectory Eigen3::Eigen Qt5::Core Qt5::Gui Qt5::Widgets)
+target_link_libraries(FrenetOptimalTrajectoryTest Eigen3::Eigen Qt5::Widgets Qt5::Gui)
+
 
